# bds-discord-bot

./: .env.example  README.md  a.ipynb  main.py  pyproject.toml
src/bds/: birdeye.py
src/db/: database.py
src/discord/: discord_helper.py  logger.py
src/sol_data/: data_manager.py  data_models.py
